BSM.css Fixed invisible links
The "Make RPC text invisible" included 2 classes that were also correlated to links, making links have an opacity of 0.

--- a/BSM.css
+++ b/BSM.css
@@ -48,6 +48,6 @@
 }
 
 /*Hides the title, and mini-text of the aforementioned RPC*/
-.anchor_c8ddc0, .anchorUnderlineOnHover__78236, .bodyLink__0ab7c, .activityName__47e51, .textRow__4750e, .activityText__47ec1 {
+.bodyLink__0ab7c, .activityName__47e51, .textRow__4750e, .activityText__47ec1 {
 	opacity: 0;
 }
